Version 0.9.6
Minor bug fixes, additional error checking and messages, small
performance improvements